[workspace]

[workspace.package]
version = "0.7.0"
description = "Behavior tree plugin for Bevy."
repository = "https://github.com/hyranno/bevior_tree"
license = "MIT OR Apache-2.0"

[package]
name = "bevior_tree"
version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
edition = "2021"
categories = [ "game-development" ]
exclude = [ "assets/" ]
keywords = [ "gamedev", "bevy", "ai", "behavior-tree" ]
readme = "README.md"

[features]
default = ["random"]
random = ["dep:rand"]

[dependencies]
bevy = { version = "0.15", default-features = false }
ordered-float = { version = "5.0" }
rand = { version = "0.8", optional = true}
# macro packages
derive-nodestate = { version = "0.7", path = "libs/derive-nodestate" }
macro-withstate = { version = "0.7", path = "libs/macro-withstate" }
macro-delegatenode = { version = "0.7", path = "libs/macro-delegatenode" }

[dev-dependencies]
bevy = "0.15"

[package.metadata.docs.rs]
all-features = true
