[workspace]

[workspace.package]
version = "0.10.0"
description = "Behavior tree plugin for Bevy."
repository = "https://github.com/hyranno/bevior_tree"
license = "MIT OR Apache-2.0"

[package]
name = "bevior_tree"
version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
edition = "2024"
categories = [ "game-development" ]
exclude = [ "assets/" ]
keywords = [ "gamedev", "bevy", "ai", "behavior-tree" ]
readme = "README.md"

[features]
default = ["random", "serde"]
random = ["dep:rand"]
serde = ["dep:serde", "dep:typetag", "bevy/serialize"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["bevy_asset"] }
ordered-float = { version = "5.0" }
rand = { version = "0.9", optional = true}
serde = { version = "1.0", features = ["derive"], optional = true }
typetag = { version = "0.2", optional = true }
# macro packages
derive-nodestate = { version = "0.10", path = "libs/derive-nodestate" }
macro-withstate = { version = "0.10", path = "libs/macro-withstate" }
macro-delegatenode = { version = "0.10", path = "libs/macro-delegatenode" }

[dev-dependencies]
bevy = "0.18"

[package.metadata.docs.rs]
all-features = true
